--- a/brewingtimer WatchKit App/Info.plist
+++ b/brewingtimer WatchKit App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Espresso Timer</string>
+	<string>Brewing Timer</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.warlo.espressotimer</string>
+	<string>com.warlo.brewingtimer</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
